# research-gap-hunter

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
api/: main.py
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/cross-domain/: page.tsx
frontend/app/search/: page.tsx
frontend/components/: Nav.tsx
frontend/lib/: api.ts
graph/: populate.py
pipeline/: batch.py  cross_domain.py  extractor.py  gap_scorer.py
tests/: test_api.py  test_batch.py  test_cross_domain.py  test_extractor.py  test_gap_scorer.py  test_graph.py  test_vectors.py
vectors/: embed.py  search.py
